// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render summary with 1 expense 1`] = `
<div>
  <h2>
    Expenses summary: Viewing 
    1
     
    expense
     totaling 
    $1.00
  </h2>
</div>
`;

exports[`Should render summary with 2 expenses 1`] = `
<div>
  <h2>
    Expenses summary: Viewing 
    3
     
    expenses
     totaling 
    $2.00
  </h2>
</div>
`;
